@@ -1,22 +1,10 @@
 package ldts.dino.model.menu;
 
-import java.util.Arrays;
+import java.util.List;
 
 public class InstructionsMenu extends Menu {
 
     public InstructionsMenu() {
-        this.entries = Arrays.asList(" ");
+        this.entries = List.of(" ");
     }
 }
-
-/*
-(The goal of the game", "is to avoid colliding with the", "obstacles as long as you can.", "",
-                "Dino can jump by", "pressing the arrow up key", "and squat by pressing", "the arrow down key.", "",
-                "There is four collectables", "available to get to", "help you:", "",
-                "Bomb - Destroys the nearest obstacle", "",
-                "Boots - Increases Dino's jump", "",
-                "Coin - Increases your score", "",
-                "Shield - You are invencible for a short time", "",
-                "Good luck!");
-
-*/
